--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>Holle World</title>
 </head>
+
 <body>
-<P>
-學
-HTML
-好好玩
-</P>
+    <div>學
+        <P>
+            HTML
+        </P>
+        好好玩
+    </div>
 </body>
+
 </html>
