--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
     <div align=center>學
         <p>HTML</p>好好玩</div>
     <hr>
-    <div>小王子
+    <div>
+        <h2>小王子</h2>
         <p>然後他又回到狐狸那裡。</p>
         <p>「再見了！」小王子說。</p>
         <p>「再見了！」狐狸說。</p>
@@ -19,33 +20,35 @@
         <p>小王子複述一遍：「真正的東西不是用眼睛可以看得到的。」</p>
     </div>
     <hr>
+    <strong>
     <table border="1">
         <tr>
             <td colspan="2">一起看看小王子留給我們與人生的六個關係練習</td>
         </tr>
         <tr>
-            <td rowspan="2">與自己的關係：</td>
+            <td rowspan="2">與自己的關係</td>
             <td>每個人都有自己的孤單課題</td>
         </tr>
         <tr>
             <td>你不需要變成你不喜歡的大人</td>
         </tr>
         <tr>
-            <td rowspan="2">與愛人的關係：</td>
+            <td rowspan="2">與愛人的關係</td>
             <td>從心甘情願豢養與被豢養開始</td>
         </tr>
         <tr>
             <td>因為他是你的玫瑰</td>
         </tr>
         <tr>
-            <td rowspan="2">與世界的關係：</td>
+            <td rowspan="2">與世界的關係</td>
             <td>用「心」去尋覓你笑著的理由</td>
         </tr>
         <tr>
             <td>分離的時候，學會道別</td>
         </tr>
     </table>
-
+    </strong>
+    <hr>
 </body>
 
 </html>
